feat: Refactor student-related entities to use Set instead of List for collections and enhance equality checks